--- a/public/index.html
+++ b/public/index.html
@@ -3,8 +3,21 @@
     <head>
       <meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1">
       <title> Titanic data visualisation</title>
+      <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+      <script src="https://d3js.org/d3.v5.min.js"></script>
+      <script src="https://d3js.org/d3-selection-multi.v0.4.min.js"></script>
+      <script src="https://d3js.org/d3-axis.v1.min.js"></script>
+      <script src="/data/data.js"></script>
+
     </head>
     <body>
-      <h1> Hello world! </h1>
+      <div class="container">
+        <header>
+          <h1> Hello world! </h1>
+        </header>
+        <div id="chart" class="row">
+        </div>
+      </div>
+      <script src="main.js"></script>
     </body>
 </html>
