--- a/public/index.html
+++ b/public/index.html
@@ -12,10 +12,26 @@
     </head>
     <body>
       <div class="container">
+
         <header>
-          <h1> Hello world! </h1>
+          <h1> Titanic passenger demographics </h1>
         </header>
+
         <div id="chart" class="row">
+        </div>
+        <h4>Filter by attributes</h2>
+        <div id="filters" class="row">
+
+          <div id="survive" class="form-group">
+            <div class="form-check-inline">
+              <input id= "dead" type="checkbox" onclick="upDateData()" checked>
+              <label for= "dead">Died</label>
+            </div>
+            <div class="form-check-inline">
+              <input id= "alive" type="checkbox" onclick="upDateData()" checked>
+              <label for= "alive">Survived</label>
+            </div>
+          </div>
         </div>
       </div>
       <script src="main.js"></script>
