--- a/public/index.html
+++ b/public/index.html
@@ -17,6 +17,10 @@
           <h1> Titanic passenger demographics </h1>
         </header>
 
+        <div id="datasets" class="row">
+
+        </div>
+
         <div id="chart" class="row">
         </div>
         <h4>Filter by attributes</h2>
@@ -34,6 +38,7 @@
           </div>
         </div>
       </div>
+      <script src="graph.js"></script>
       <script src="main.js"></script>
     </body>
 </html>
