--- a/public/index.html
+++ b/public/index.html
@@ -19,6 +19,7 @@
           font-family: 'Open Sans', sans-serif;
         }
         #chart {
+          background-color: white;
           left: 0px;
           right: 10px;
           top: 0px;
@@ -30,10 +31,18 @@
           max-height: 95vh;
         }
 
-        .info {
-          background-color: #fcfcfc;
+        .jumbotron {
+          background-color: #17a2b8 !important;
+          color: #FFFFFF;
         }
 
+        .info {
+          background-color: #ECEFF1;
+        }
+
+        .data {
+
+        }
         .text-label {
           font-weight: bold;
         }
@@ -55,7 +64,7 @@
           <div class="col-lg-5 info">
             <div class="row jumbotron">
               <div class="col-md">
-                <h1 class="text-center"> Titanic passenger demographics </h1>
+                <h2 class="text-center"> Titanic Passenger Demographics </h2>
               </div>
             </div>
             <div class="row">
@@ -75,82 +84,82 @@
             </div>
 
             <div id="filters">
-              <div class="btn-group d-flex justify-content-center">
+              <div class=" d-flex justify-content-center">
                 <div class="dropdown mr-1">
-                  <button class="btn btn-secondary dropdown-toggle" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                  <button class="btn btn-sm btn-info dropdown-toggle" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                     Mortality
                   </button>
                   <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
                     <div class="dropdown-item">
-                      <input id= "died" type="checkbox"checked>
+                      <input id= "died" type="checkbox" onClick="upDateData()" checked>
                       <label for= "died">Died</label>
                     </div>
                     <div class="dropdown-item">
-                      <input id= "survived" type="checkbox"checked>
+                      <input id= "survived" type="checkbox" onClick="upDateData()" checked>
                       <label for= "survived">Survived</label>
                     </div>
                   </div>
                 </div>
                 <div class="dropdown mr-1">
-                  <button class="btn btn-secondary dropdown-toggle" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                  <button class="btn btn-sm btn-info dropdown-toggle" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                     Class
                   </button>
                   <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
                     <div class="dropdown-item">
-                      <input id= "third" type="checkbox"checked>
+                      <input id= "third" type="checkbox" onClick="upDateData()" checked>
                       <label for= "third">3rd class</label>
                     </div>
                     <div class="dropdown-item">
-                      <input id= "second" type="checkbox"checked>
+                      <input id= "second" type="checkbox" onClick="upDateData()" checked>
                       <label for= "second">2nd Class</label>
                     </div>
                     <div class="dropdown-item">
-                      <input id= "first" type="checkbox"checked>
+                      <input id= "first" type="checkbox" onClick="upDateData()" checked>
                       <label for= "first">1st Class</label>
                     </div>
                   </div>
                 </div>
                 <div class="dropdown mr-1">
-                  <button class="btn btn-secondary dropdown-toggle" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                  <button class="btn btn-sm btn-info dropdown-toggle" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                     Gender
                   </button>
                   <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
                     <div class="dropdown-item">
-                      <input id= "male" type="checkbox"checked>
+                      <input id= "male" type="checkbox" onClick="upDateData()" checked>
                       <label for= "male">Male</label>
                     </div>
                     <div class="dropdown-item">
-                      <input id= "female" type="checkbox"checked>
+                      <input id= "female" type="checkbox" onClick="upDateData()" checked>
                       <label for= "female">Female</label>
                     </div>
                   </div>
                 </div>
                 <div class="dropdown mr-1">
-                  <button class="btn btn-secondary dropdown-toggle" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                  <button class="btn btn-sm btn-info dropdown-toggle" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                     Embark
                   </button>
                   <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
                     <div class="dropdown-item">
-                      <input id= "Cherbourg" type="checkbox"checked>
+                      <input id= "Cherbourg" type="checkbox" onClick="upDateData()" checked>
                       <label for= "Cherbourg">Cherbourg</label>
                     </div>
                     <div class="dropdown-item">
-                      <input id= "Queenstown" type="checkbox"checked>
+                      <input id= "Queenstown" type="checkbox" onClick="upDateData()" checked>
                       <label for= "Queenstown">Queenstown</label>
                     </div>
                     <div class="dropdown-item">
-                      <input id= "Southampton" type="checkbox"checked>
+                      <input id= "Southampton" type="checkbox" onClick="upDateData()" checked>
                       <label for= "Southampton">Southampton</label>
                     </div>
                   </div>
                 </div>
                 <div class="dropdown">
-                  <button class="btn btn-secondary dropdown-toggle" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                  <button class="btn btn-sm btn-info dropdown-toggle" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                     Unknown
                   </button>
                   <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
                     <div class="dropdown-item">
-                      <input id= "unknown" type="checkbox"checked>
+                      <input id= "unknown" type="checkbox" onClick="upDateData()"checked>
                       <label for= "unknown">Unknown age</label>
                     </div>
                   </div>
@@ -176,14 +185,14 @@
 
               <div class="row">
                 <div class="col-12 d-flex justify-content-center mt-2">
-                  <button class="btn btn-primary" type="button" onClick="validateAge()">
-                    Filter dataset
+                  <button class="btn btn-info" type="button" onClick="validateAge()">
+                    Filter by age
                   </button>
                 </div>
               </div>
             </div>
           </div>
-          <div class="col-lg-7">
+          <div class="col-lg-7 data">
             <div id="chart">
             </div>
           </div>
