--- a/public/index.html
+++ b/public/index.html
@@ -168,27 +168,39 @@
               <div id="age" class="row mt-3">
                 <div class="col-sm-6">
                   <label for= "min">Min age</label>
-                  <input id= "min" class="form-control" type="number" min="1" max="99" value="1">
-                  <div id = "error1" style="color:red" hidden>Age must be greater than zero</div>
-                  <div id = "error2" style="color:red" hidden>Age must be less than 100</div>
+                  <select id= "min" class="form-control" onchange="validateAge()">
+                    <option value="0" selected>0</option>
+                    <option value="10">10</option>
+                    <option value="20">20</option>
+                    <option value="30">30</option>
+                    <option value="40">40</option>
+                    <option value="50">50</option>
+                    <option value="60">60</option>
+                    <option value="70">70</option>
+                    <option value="80">80</option>
+                    <option value="90">90</option>
+                    <option value="100">100</option>
+                  </select>
                 </div>
                 <div class="col-sm-6">
                   <label for= "max">Max age</label>
-                  <input id= "max" class="form-control" type="number" min="1" max="99" value="99">
-                  <div id = "error3" style="color:red" hidden>Age must be greater than zero</div>
-                  <div id = "error4" style="color:red" hidden>Age must be less than 100</div>
+                  <select id= "max" class="form-control" onchange="validateAge()">
+                    <option value="0">0</option>
+                    <option value="10">10</option>
+                    <option value="20">20</option>
+                    <option value="30">30</option>
+                    <option value="40">40</option>
+                    <option value="50">50</option>
+                    <option value="60">60</option>
+                    <option value="70">70</option>
+                    <option value="80">80</option>
+                    <option value="90">90</option>
+                    <option value="100" selected>100</option>
+                  </select>
                 </div>
               </div>
               <div class="row">
                 <div id = "error5" class="col-sm-12" style="color:red" hidden>Minimum age must be less than maximum</div>
-              </div>
-
-              <div class="row">
-                <div class="col-12 d-flex justify-content-center mt-2">
-                  <button class="btn btn-info" type="button" onClick="validateAge()">
-                    Filter by age
-                  </button>
-                </div>
               </div>
             </div>
           </div>
