--- a/public/index.html
+++ b/public/index.html
@@ -85,7 +85,7 @@
 
             <div id="filters">
               <div class=" d-flex justify-content-center">
-                <div class="dropdown mr-1">
+                <div class="dropdown">
                   <button class="btn btn-sm btn-info dropdown-toggle" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                     Mortality
                   </button>
@@ -100,7 +100,7 @@
                     </div>
                   </div>
                 </div>
-                <div class="dropdown mr-1">
+                <div class="dropdown">
                   <button class="btn btn-sm btn-info dropdown-toggle" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                     Class
                   </button>
@@ -119,7 +119,7 @@
                     </div>
                   </div>
                 </div>
-                <div class="dropdown mr-1">
+                <div class="dropdown">
                   <button class="btn btn-sm btn-info dropdown-toggle" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                     Gender
                   </button>
@@ -134,7 +134,7 @@
                     </div>
                   </div>
                 </div>
-                <div class="dropdown mr-1">
+                <div class="dropdown">
                   <button class="btn btn-sm btn-info dropdown-toggle" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                     Embark
                   </button>
